--- a/PhoneScoutAdmin/Home.xaml
+++ b/PhoneScoutAdmin/Home.xaml
@@ -49,11 +49,13 @@
 
             <!--Side menu-->
             <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Vertical" Background="#80A4CB">
-                <Button Content="Manage phones" Margin="15,25,15,10" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center" Click="loadPhones"/>
+                <Button Content="Manage phones" Margin="15,50,15,10" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center" Click="loadPhones"/>
 
                 <Button Content="Manage manufacturers" Margin="15,25,15,10" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center" Click="loadManufacturers"/>
 
+                <Button Content="Manage users" Margin="15,25,15,10" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center" Click="loadUsers"/>
 
+                <Button Content="Manage storage" Margin="15,25,15,10" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center" Click="loadStorage"/>
 
             </StackPanel>
 
@@ -245,6 +247,191 @@
                 <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center">                    
                     <Button Width="200" Content="Delete manufacturer" Margin="10,15,10,0" Padding="5" BorderBrush="Red" BorderThickness="3" FontSize="18" VerticalAlignment="Center" Background="WhiteSmoke"/>
                 </StackPanel>                
+            </Grid>
+
+            <Grid Grid.Row="1" Grid.Column="1" Background="LightGray" x:Name="userDetails"  Visibility="Collapsed">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="12*"/>
+                    <RowDefinition Height="2*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="5*"/>
+                    <ColumnDefinition Width="4*"/>
+                </Grid.ColumnDefinitions>
+
+
+
+                <DataGrid x:Name="userDataGrid" Grid.Row="1" Grid.Column="0" SelectionChanged="showInfos" AutoGenerateColumns="True">
+
+                </DataGrid>
+
+
+                <WrapPanel Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="1*"/>
+                        </Grid.ColumnDefinitions>
+
+                        <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0" Margin="5">
+                            <TextBlock Text="ⓘ "
+           Margin="0,0,0,0"
+           ToolTip="User's full name"
+               VerticalAlignment="Center"
+               FontSize="14"/>
+
+                            <TextBlock Text="User full name: " FontSize="16"/>
+                        </StackPanel>
+
+                        <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="0" Margin="5">
+                            <TextBlock Text="ⓘ "
+Margin="0,0,0,0"
+ToolTip="User's email address."
+VerticalAlignment="Center"
+FontSize="14"/>
+
+                            <TextBlock Text="User email address: " FontSize="16"/>
+                        </StackPanel>
+
+                        <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="0" Margin="5">
+                            <TextBlock Text="ⓘ "
+Margin="0,0,0,0"
+ToolTip="User's privilege"
+VerticalAlignment="Center"
+FontSize="14"/>
+
+                            <TextBlock Text="User privilege: " FontSize="16"/>
+                        </StackPanel>
+
+                        <StackPanel Orientation="Horizontal" Grid.Row="3" Grid.Column="0" Margin="5">
+                            <TextBlock Text="ⓘ "
+Margin="0,0,0,0"
+ToolTip="Indicates if a user is active or not."
+VerticalAlignment="Center"
+FontSize="14"/>
+
+                            <TextBlock Text="User active: " FontSize="16"/>
+                        </StackPanel>
+
+
+
+                        <TextBox x:Name="userName" Width="200" Height="20" Grid.Row="0" Grid.Column="1" Margin="5"/>
+                        <TextBox x:Name="userEmail" Width="200" Height="20" Grid.Row="1" Grid.Column="1" Margin="5"/>
+                        <ComboBox
+                            x:Name="userPrivilege"
+                            Width="200"
+                            Height="20"
+                            Grid.Row="2"
+                            Grid.Column="1"
+                            Margin="5"
+                            Background="White"
+                            ItemsSource="{Binding Items}"                            
+                            SelectedItem="{Binding SelectedItem}"
+                            SelectedValuePath="Id"/>
+
+                        <CheckBox x:Name="userActive" Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center">
+                            <CheckBox.LayoutTransform>
+                                <ScaleTransform ScaleX="1.5" ScaleY="1.5"/>
+                            </CheckBox.LayoutTransform>
+                        </CheckBox>
+
+
+
+                        <Button Grid.Row="5" Grid.ColumnSpan="2" Content="Save datas" Margin="10,15,10,-15" Padding="5" BorderBrush="#68F145" BorderThickness="3" FontSize="18" VerticalAlignment="Center" Background="WhiteSmoke"/>
+
+                    </Grid>
+                </WrapPanel>
+
+
+                <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <Button Width="200" Content="Delete manufacturer" Margin="10,15,10,0" Padding="5" BorderBrush="Red" BorderThickness="3" FontSize="18" VerticalAlignment="Center" Background="WhiteSmoke"/>
+                </StackPanel>
+            </Grid>
+
+            <Grid Grid.Row="1" Grid.Column="1" Background="LightGray" x:Name="storageDetails"  Visibility="Visible">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="12*"/>
+                    <RowDefinition Height="2*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="5*"/>
+                    <ColumnDefinition Width="4*"/>
+                </Grid.ColumnDefinitions>
+
+
+
+                <DataGrid x:Name="storageDataGrid" Grid.Row="1" Grid.Column="0" SelectionChanged="showInfos" AutoGenerateColumns="True">
+
+                </DataGrid>
+
+
+                <WrapPanel Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="1*"/>
+                        </Grid.ColumnDefinitions>
+
+                        <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0" Margin="5">
+                            <TextBlock Text="ⓘ "
+           Margin="0,0,0,0"
+           ToolTip="Indicates the part name in the storage."
+               VerticalAlignment="Center"
+               FontSize="14"/>
+
+                            <TextBlock Text="Part name: " FontSize="16"/>
+                        </StackPanel>
+
+                        <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="0" Margin="5">
+                            <TextBlock Text="ⓘ "
+Margin="0,0,0,0"
+ToolTip="Indicates how many of that part is available in the storage."
+VerticalAlignment="Center"
+FontSize="14"/>
+
+                            <TextBlock Text="Part amount: " FontSize="16"/>
+                        </StackPanel>
+
+                        
+
+
+
+                        <TextBox x:Name="partName" Width="200" Height="20" Grid.Row="0" Grid.Column="1" Margin="5"/>
+                        <TextBox x:Name="partAmount" Width="200" Height="20" Grid.Row="1" Grid.Column="1" Margin="5"/>                     
+
+                        
+
+
+
+                        <Button Grid.Row="5" Grid.ColumnSpan="2" Content="Save datas" Margin="10,15,10,-15" Padding="5" BorderBrush="#68F145" BorderThickness="3" FontSize="18" VerticalAlignment="Center" Background="WhiteSmoke"/>
+
+                    </Grid>
+                </WrapPanel>
+
+
+                <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <Button Width="200" Content="Delete part" Margin="10,15,10,0" Padding="5" BorderBrush="Red" BorderThickness="3" FontSize="18" VerticalAlignment="Center" Background="WhiteSmoke"/>
+                </StackPanel>
             </Grid>
         </Grid>
     </DockPanel>
